i18n/ja/docusaurus-plugin-content-docs/version-0.5.x/keybindings.md
---
sidebar_position: 4
---

# キーバインディングリファレンス

このページでは、Gitti で利用可能なすべてのキーバインディングをコンテキストとシナリオ別に整理して記載しています。

## 凡例

- **`*`** = グローバルキーバインディング（ポップアップが開いていない時、すべてのコンテキストで機能）
- **`* [!!]`** = グローバルキーバインディングで**ポップアップが開いている時でも機能**

## グローバルキーバインディング

| キー           | マーカー | アクション                               | 備考                                           |
| :------------- | :------- | :--------------------------------------- | :--------------------------------------------- |
| `ctrl+c`       | `* [!!]` | Gitti を終了                             | 強制終了、ポップアップ内でも機能               |
| `-`            | `*`      | パネル幅を縮小                           | 左側のパネルを縮小                             |
| `+`            | `*`      | パネル幅を拡大                           | 左側のパネルを拡大                             |
| `ctrl+s`       | `* [!!]` | すべてのファイルをステージ               | 変更されたすべてのファイルをステージ           |
| `ctrl+u`       | `* [!!]` | すべてのファイルをアンステージ           | ステージされたすべてのファイルをアンステージ   |
| `ctrl+g`       | `* [!!]` | 作者の GitHub を開く                     | ブラウザで作者の GitHub を開く                 |
| `ctrl+l`       | `* [!!]` | 作者の LinkedIn を開く                   | ブラウザで作者の LinkedIn を開く               |
| `q` または `Q` | `*`      | Gitti を終了                             | ポップアップが開いていない時のみ機能           |
| `?`            | `*`      | グローバルキーバインディングヘルプを開く | ポップアップですべてのキーバインディングを表示 |
| `C`            | `*`      | 操作を継続 (Continue)                    | 汎用的な継続操作 (rebase, merge, cherry-pick)  |
| `ctrl+a`       | `*`      | 操作を中止 (Abort)                       | 汎用的な中止操作 (rebase, merge, cherry-pick)  |
| `ctrl+f`       | `*`      | すべてフェッチ                           | 手動ですべてフェッチ                           |

## コンポーネントナビゲーション

| キー        | アクション                           | 備考                                 |
| :---------- | :----------------------------------- | :----------------------------------- |
| `1`         | ローカルブランチパネルにフォーカス   | ブランチリストにフォーカスを切り替え |
| `2`         | 変更されたファイルパネルにフォーカス | ファイルリストにフォーカスを切り替え |
| `3`         | コミットログパネルにフォーカス       | コミットログにフォーカスを切り替え   |
| `4`         | Stash パネルにフォーカス             | Stash リストにフォーカスを切り替え   |
| `tab`       | コンポーネントを順方向に切り替え     | 次のパネルに移動                     |
| `shift+tab` | コンポーネントを逆方向に切り替え     | 前のパネルに移動                     |

## リストナビゲーション

| キー           | コンテキスト           | アクション                    |
| :------------- | :--------------------- | :---------------------------- |
| `↑` または `k` | 任意のリストパネル     | 上に移動 / 前のアイテムを選択 |
| `↓` または `j` | 任意のリストパネル     | 下に移動 / 次のアイテムを選択 |
| `↑` または `k` | ポップアップ選択リスト | 前のオプションに移動          |
| `↓` または `j` | ポップアップ選択リスト | 次のオプションに移動          |

## 詳細パネルのスクロール

| キー           | アクション     | コンテキスト         |
| :------------- | :------------- | :------------------- |
| `↑` または `k` | 上にスクロール | 詳細コンポーネント内 |
| `↓` または `j` | 下にスクロール | 詳細コンポーネント内 |
| `←` または `h` | 左にスクロール | 詳細コンポーネント内 |
| `→` または `l` | 右にスクロール | 詳細コンポーネント内 |

## ローカルブランチパネル

| キー    | アクション                     | 場合                                           |
| :------ | :----------------------------- | :--------------------------------------------- |
| `< / >` | コンポーネントパネルの切り替え | ローカルブランチ、タグ、リモート間を切り替え   |
| `n`     | 新しいブランチを作成           | ブランチ作成フローを開く                       |
| `enter` | 選択したブランチに切り替え     | 必要に応じてブランチ切り替えポップアップを開く |
| `d`     | 選択したブランチを削除         | ブランチを削除（必要に応じて確認あり）         |
| `r`     | 選択したブランチの名前を変更   | 名前変更入力ポップアップを開く                 |

## 変更されたファイルパネル

| キー    | アクション                      | 場合                                                                           |
| :------ | :------------------------------ | :----------------------------------------------------------------------------- |
| `space` | ステージ/アンステージを切り替え | ファイルをステージとアンステージ間で切り替え                                   |
| `e`     | ファイルを編集                  | 外部エディタ/ターミナルでファイルを開く                                        |
| `enter` | ファイルの差分を表示            | 詳細パネルに差分を表示                                                         |
| `r`     | コンフリクトを解決              | コンフリクト解決オプションを開く（コンフリクトが発生しているファイルのみ表示） |
| `d`     | 変更を破棄                      | 破棄確認フローを開く                                                           |
| `s`     | 選択したファイルを Stash        | Stash メッセージ入力ポップアップを開く                                         |
| `S`     | すべてのファイルを Stash        | Stash メッセージ入力ポップアップを開く                                         |
| `c`     | コミット                        | コミットポップアップを開く                                                     |
| `A`     | コミットを修正                  | 修正コミットポップアップを開く                                                 |

## コミットログパネル

| キー     | アクション                 | 備考                                               |
| :------- | :------------------------- | :------------------------------------------------- |
| `r`      | 選択したコミットをリセット | リセットオプションを開く（Soft/Mixed/Hard）        |
| `R`      | 最新のコミットをリセット   | HEAD のリセットオプションを開く（Soft/Mixed/Hard） |
| `ctrl+r` | コミットをリバート         | コミットのリバートオプションを開く                 |
| `t`      | タグを作成                 | タグ作成メニューを開く                             |
| `ctrl+p` | チェリーピックモード       | チェリーピック選択モードに入る                     |
| `enter`  | コミット詳細を表示         | 詳細パネルにコミットの差分を表示                   |

## Stash パネル

| キー        | アクション     | 場合                             |
| :---------- | :------------- | :------------------------------- |
| `space`     | Stash を適用   | Stash を適用するがリストには残す |
| `backspace` | Stash をポップ | Stash を適用してリストから削除   |
| `d`         | Stash を削除   | Stash を完全に削除               |

## ログパネル

| キー | アクション         | 備考                                           |
| :--- | :----------------- | :--------------------------------------------- |
| `e`  | ログのエクスポート | ログの内容をダウンロードフォルダにエクスポート |

## タグパネル

| キー     | アクション                     | 場合                                         |
| :------- | :----------------------------- | :------------------------------------------- |
| `< / >`  | コンポーネントパネルの切り替え | ローカルブランチ、タグ、リモート間を切り替え |
| `d`      | タグを削除                     | タグ削除メニューを開く                       |
| `ctrl+p` | タグをプッシュ                 | タグプッシュメニューを開く                   |
| `f`      | タグをフェッチ                 | タグフェッチメニューを開く                   |
| `?`      | キーバインディングと手順       | 専用ヘルプポップアップを開く                 |

## リモート操作

| キー | アクション | 場合                                                      |
| :--- | :--------- | :-------------------------------------------------------- |
| `p`  | プッシュ   | プッシュフローを開く（リモート選択 → プッシュオプション） |
| `P`  | プル       | プルフローを開く（プルタイプ選択）                        |

## リモートパネル

| キー    | アクション                         | 場合                                         |
| :------ | :--------------------------------- | :------------------------------------------- |
| `< / >` | コンポーネントパネルの切り替え     | ローカルブランチ、タグ、リモート間を切り替え |
| `n`     | 新しいリモート                     | リモート追加フローを開く                     |
| `d`     | リモートを削除                     | 設定されたリモートを削除する                 |
| `e`     | リモートを編集                     | リモート編集フローを開く                     |
| `enter` | トラッキングアップストリームに設定 | 現在のリモートをアップストリームとして設定   |
| `?`     | キーバインディングと手順           | 専用ヘルプポップアップを開く                 |

## ポップアップキーバインディング

### テキスト入力ポップアップ

_適用対象: コミット、コミット修正、リモート追加、ブランチ作成、Stash メッセージ_

| キー        | アクション     | 備考                                                               |
| :---------- | :------------- | :----------------------------------------------------------------- |
| `ctrl+e`    | 送信           | フォームを送信（複数行テキストエリア用）                           |
| `ctrl+p`    | 貼り付け       | クリップボードからテキストを貼り付け                               |
| `ctrl+y`    | コピー         | 選択したテキストをクリップボードにコピー                           |
| `enter`     | 送信           | 単一行入力のみ（ブランチ名、Stash メッセージ、リモートフィールド） |
| `esc`       | キャンセル     | 保存せずにポップアップを閉じる                                     |
| `tab`       | 次のフィールド | 次の入力フィールドに移動（複数フィールドがある場合）               |
| `shift+tab` | 前のフィールド | 前の入力フィールドに移動（複数フィールドがある場合）               |

---

### 選択ポップアップ

_適用対象: ブランチタイプ、切り替えタイプ、プッシュタイプ、プルタイプ、リモート選択、破棄タイプ、コンフリクト解決タイプ_

| キー           | アクション | 備考                                 |
| :------------- | :--------- | :----------------------------------- |
| `↑` または `k` | 上に移動   | 前のオプションを選択                 |
| `↓` または `j` | 下に移動   | 次のオプションを選択                 |
| `enter`        | 選択を確定 | 選択したオプションで続行             |
| `esc`          | キャンセル | アクションなしでポップアップを閉じる |

---

### 出力/結果ポップアップ

_適用対象: プッシュ出力、プル出力、ブランチ切り替え出力_

| キー  | アクション           | 備考                     |
| :---- | :------------------- | :----------------------- |
| `esc` | ポップアップを閉じる | 出力ポップアップを閉じる |

---

### キーバインディングヘルプポップアップ

| キー           | アクション     | 備考                                 |
| :------------- | :------------- | :----------------------------------- |
| `↑` または `k` | 上にスクロール | キーバインディングリストをスクロール |
| `↓` または `j` | 下にスクロール | キーバインディングリストをスクロール |
| `esc`          | ヘルプを閉じる | ヘルプポップアップを閉じる           |

## 詳細ビュー（右パネル）

| キー           | アクション               | 備考                                                   |
| :------------- | :----------------------- | :----------------------------------------------------- |
| `esc`          | リストに戻る             | 詳細ビューを終了し、リストパネルにフォーカスを戻す     |
| `↑` または `k` | 上にスクロール           | 差分コンテンツを上にスクロール                         |
| `↓` または `j` | 下にスクロール           | 差分コンテンツを下にスクロール                         |
| `←` または `h` | 左にスクロール           | 差分コンテンツを左にスクロール                         |
| `→` または `l` | 右にスクロール           | 差分コンテンツを右にスクロール                         |
| `[`            | 前の分割パネル           | ステージ/アンステージビューの切り替え                  |
| `]`            | 次の分割パネル           | ステージ/アンステージビューの切り替え                  |
| `L`            | 行ステージングの切り替え | 個別の行ステージングモードの開始/終了 (ファイル閲覧時) |

## まとめ

- **`* [!!]`** キーバインディングはポップアップ内を含めてどこでも機能
- **`*`** キーバインディングはグローバルに機能するがポップアップが開いている時は機能しない
- **コンテキスト固有のキーバインディング**はそれぞれのパネルでのみ機能
- **ポップアップキーバインディング**はポップアップタイプ（テキスト入力 vs 選択 vs 出力）に依存
- **`esc`**はポップアップを閉じるまたは詳細ビューを終了する普遍的な方法
